// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tensting on <GifExpertApp /> should match with the snapshot along time 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</div>
`;

exports[`Tensting on <GifExpertApp /> should shows a category list 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One Punch"
    key="One Punch"
  />
  <GifGrid
    category="Dragon ball"
    key="Dragon ball"
  />
</div>
`;
